@@ -2,6 +2,7 @@
  * Copyright (c) 2014, Hannes Mehnert
  * Copyright (c) 2014 Anil Madhavapeddy <anil@recoil.org>
  * Copyright (c) 2014 David Kaloper
+ * Copyright (c) 2015 Citrix Systems Inc
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -28,38 +29,88 @@
 
 open Lwt
 
-type id = unit
-
 type 'a io  = 'a Lwt.t
 type buffer = Cstruct.t
 type error  = [ `No_entropy_device of string ]
 
 type handler = source:int -> buffer -> unit
 
-type t = { mutable handler : handler option }
+type id = [ `FromHost | `Weak ]
 
-let connect () =
+type t =
+| RandomSelfInit (* Implementation of `Weak *)
+| EntropyConsole of Console_xen.t (* Implementation of `FromHost *)
+
+let id = function
+| RandomSelfInit -> `Weak
+| EntropyConsole _ -> `FromHost
+
+(* These are defined in xentropy/doc/protocol.md *)
+let console_name = "org.openmirage.entropy.1"
+let handshake_message =
+  let string = "Hello, may I have some entropy?\r\n" in
+  let buffer = Cstruct.create (String.length string) in
+  Cstruct.blit_from_string string 0 buffer 0 (String.length string);
+  buffer
+let handshake_response = "You may treat everything following this message as entropy.\r\n"
+
+let (>>|=) x f = x >>= function
+| `Ok x -> f x
+| `Eof ->
+  print_endline "Received an EOF from the entropy console";
+  return (`Error (`No_entropy_device console_name))
+| `Error (`Invalid_console x) ->
+  Printf.printf "Invalid_console %s\n%!" x;
+  return (`Error (`No_entropy_device console_name))
+| `Error _ ->
+  Printf.printf "Unknown console device failure\n%!";
+  return (`Error (`No_entropy_device console_name))
+
+let connect = function
+| `Weak ->
   Random.self_init ();
-  print_endline "Entropy_xen_weak: using a weak entropy source seeded only from time.";
-  return (`Ok { handler = None })
+  print_endline "Entropy_xen: using a weak entropy source seeded only from time.";
+  return (`Ok RandomSelfInit)
+| `FromHost ->
+  Printf.printf "Entropy_xen: attempting to connect to Xen entropy source %s\n%!" console_name;
+  Console_xen.connect console_name
+  >>|= fun device ->
+  Console_xen.write device handshake_message
+  >>|= fun () ->
+  Console_xen.read device
+  >>|= fun buffer ->
+  let string = Cstruct.to_string buffer in
+  if string <> handshake_response then begin
+    Printf.printf "Entropy_xen: received [%s](%d bytes) instead of expected handshake message"
+      (String.escaped string) (String.length string);
+    return (`Error (`No_entropy_device console_name))
+  end else begin
+    print_endline "Entropy_xen: connected to Xen entropy source";
+    return (`Ok (EntropyConsole device))
+  end
 
 let disconnect _ = return_unit
 
-let id _ = ()
-
 let chunk = 16
 
-let refeed t =
-  match t.handler with
-  | None   -> ()
-  | Some f ->
-      let s  = Random.int 256
-      and cs = Cstruct.create chunk in
-      for i = 0 to chunk - 1 do
-        Cstruct.set_uint8 cs i Random.(int 256)
-      done ;
-      f ~source:s cs
+let refeed t f = match t with
+| EntropyConsole console ->
+  Console_xen.read console
+  >>|= fun cs ->
+  f ~source:(Cstruct.get_uint8 cs 0) (Cstruct.shift cs 1);
+  return (`Ok ())
+| RandomSelfInit ->
+  let s  = Random.int 256
+  and cs = Cstruct.create chunk in
+  for i = 0 to chunk - 1 do
+    Cstruct.set_uint8 cs i Random.(int 256)
+  done ;
+  f ~source:s cs;
+  return (`Ok ())
 
-let handler t f =
-  t.handler <- Some f ; refeed t ; return_unit
+let handler t f : unit Lwt.t =
+  (* Read data from the console and advertise it.
+     FIXME: we should do this more than once. How often? *)
+  let (_: 'a Lwt.t) = refeed t f in
+  return_unit
 
