@@ -1,3 +1,6 @@
+trunk (unreleased):
+* xen: read entropy from a Xen PV device
+
 0.2.0 (16-Aug-2014):
 * Do not wrap `Entropy_unix` in a functor as it is meant to be used directly.
 
